[gd_scene load_steps=53 format=3 uid="uid://bywnukq17v208"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_dpdcl"]
[ext_resource type="PackedScene" uid="uid://ck3y2as0labp0" path="res://Instances/player.tscn" id="2_pxkbr"]
[ext_resource type="PackedScene" uid="uid://biwxpg0o4st6v" path="res://Instances/Helpers/questManager.tscn" id="3_6pp5x"]
[ext_resource type="Environment" uid="uid://b8wuygwcxt70r" path="res://Resources/Environments/Farmlands.tres" id="5_hwca2"]
[ext_resource type="Script" path="res://Scripts/pauseMenu.gd" id="6_3rkpl"]
[ext_resource type="Shader" path="res://Resources/Shaders/wavy.gdshader" id="7_s4ple"]
[ext_resource type="Theme" uid="uid://c3t3dtsco6rf6" path="res://Resources/mainMenuTheme.tres" id="8_t6qqg"]
[ext_resource type="Script" path="res://Scripts/transitions.gd" id="9_psqbl"]
[ext_resource type="Shader" path="res://Resources/Shaders/vignette.gdshader" id="10_ujvdg"]
[ext_resource type="Theme" uid="uid://ccw6y1271j2pb" path="res://Resources/dialogueTheme.tres" id="11_ur5wi"]
[ext_resource type="Script" path="res://Scripts/Limitbar.gd" id="12_ir7nj"]
[ext_resource type="PackedScene" uid="uid://ddp3f62huxqab" path="res://Instances/debugUI.tscn" id="13_7f5fb"]
[ext_resource type="Shader" path="res://Resources/Shaders/wigglewavy.gdshader" id="14_5tfwf"]
[ext_resource type="FontFile" uid="uid://d37gk6icy7y45" path="res://Fonts/VCR_OSD_MONO_1.001.ttf" id="15_tdnbe"]
[ext_resource type="Texture2D" uid="uid://b04t6sqntivuo" path="res://Sprites/NPCs/Portraits/old.png" id="16_jddlc"]
[ext_resource type="Texture2D" uid="uid://c3x4vjtt6g37j" path="res://Sprites/NPCs/Portraits/bovi.png" id="17_cp6lb"]
[ext_resource type="Texture2D" uid="uid://bobh42kleuhmh" path="res://Sprites/NPCs/Portraits/keeper.png" id="18_p8u4w"]
[ext_resource type="Texture2D" uid="uid://p82qwfpglcr" path="res://Sprites/NPCs/Portraits/cool.png" id="19_dun1g"]
[ext_resource type="Texture2D" uid="uid://c30f5ip1wkft8" path="res://Sprites/NPCs/Portraits/hat.png" id="20_1tpri"]
[ext_resource type="Texture2D" uid="uid://ds5mnp3oxr7bh" path="res://Sprites/NPCs/Portraits/kin.png" id="21_nxwoq"]
[ext_resource type="Texture2D" uid="uid://cdeq8ydlmp5e5" path="res://Sprites/NPCs/Portraits/portrait.png" id="22_21o0q"]
[ext_resource type="AudioStream" uid="uid://bwmmara6fxk1j" path="res://Audio/sfx/Tick.wav" id="23_j40ph"]
[ext_resource type="Texture2D" uid="uid://b8qxi8stcmydv" path="res://Sprites/Misc/dialogArrow.png" id="24_wxd66"]
[ext_resource type="Texture2D" uid="uid://dmjo1q6ukx12l" path="res://Sprites/backgrounds/farmlandSky.tres" id="25_5yaeg"]
[ext_resource type="Texture2D" uid="uid://bfi80xpxhxye6" path="res://Sprites/backgrounds/farmforeground.png" id="26_a23wb"]
[ext_resource type="PackedScene" uid="uid://cg7daib18pq0c" path="res://Levels/debugroom.tscn" id="27_702vk"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_xrx0c"]
dof_blur_far_distance = 13.05
dof_blur_near_enabled = true
dof_blur_near_distance = 1.59
dof_blur_amount = 0.21

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7flpv"]
shader = ExtResource("7_s4ple")
shader_parameter/height = 10.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_03vhg"]
font_size = 80
outline_size = 15
outline_color = Color(0.647059, 0.258824, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hqfi"]
shader = ExtResource("7_s4ple")
shader_parameter/height = 10.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_5t4us"]
font_size = 114

[sub_resource type="Animation" id="Animation_7w6dn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2663, 1498)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1934, -209)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(560, 489)]
}

[sub_resource type="Animation" id="Animation_01sad"]
resource_name = "fadeEnd"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-368, -209)]
}

[sub_resource type="Animation" id="Animation_8ough"]
resource_name = "fadeStart"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.07053, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-368, -209)]
}

[sub_resource type="Animation" id="Animation_ndrl4"]
resource_name = "intermissionEnd"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_grqaf"]
resource_name = "intermissionStart"
length = 5.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.4, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-346, -166)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(560, 489)]
}

[sub_resource type="Animation" id="Animation_vr5bv"]
resource_name = "wipeEnd"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.366, 1),
"update": 0,
"values": [Vector2(-368, -209), Vector2(-2670, -209)]
}

[sub_resource type="Animation" id="Animation_fmo76"]
resource_name = "wipeStart"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2663, 1498)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(3.03143, 0.366021, 1),
"update": 0,
"values": [Vector2(1934, -209), Vector2(-368, -209), Vector2(-2670, -209)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u4itv"]
_data = {
"RESET": SubResource("Animation_7w6dn"),
"fadeEnd": SubResource("Animation_01sad"),
"fadeStart": SubResource("Animation_8ough"),
"intermissionEnd": SubResource("Animation_ndrl4"),
"intermissionStart": SubResource("Animation_grqaf"),
"wipeEnd": SubResource("Animation_vr5bv"),
"wipeStart": SubResource("Animation_fmo76")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i4rtp"]
shader = ExtResource("10_ujvdg")
shader_parameter/color = null
shader_parameter/multiplier = -0.177
shader_parameter/softness = 1.406

[sub_resource type="ShaderMaterial" id="11"]
shader = ExtResource("14_5tfwf")
shader_parameter/height = 10.0
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="ShaderMaterial" id="12"]
shader = ExtResource("7_s4ple")
shader_parameter/height = 3.0
shader_parameter/frequency = 2.0
shader_parameter/speed = 2.0

[sub_resource type="Theme" id="14"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 0
Label/font_sizes/font_size = 28
Label/fonts/font = ExtResource("15_tdnbe")

[sub_resource type="ShaderMaterial" id="16"]
shader = ExtResource("7_s4ple")
shader_parameter/height = 1.2
shader_parameter/frequency = 0.4
shader_parameter/speed = 1.5

[sub_resource type="SpriteFrames" id="15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_jddlc")
}],
"loop": true,
"name": &"bald",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_cp6lb")
}],
"loop": true,
"name": &"bovi",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_p8u4w")
}],
"loop": true,
"name": &"cloak",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_dun1g")
}],
"loop": true,
"name": &"cool",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"inspect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_1tpri")
}],
"loop": true,
"name": &"kid",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_nxwoq")
}],
"loop": true,
"name": &"kin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_21o0q")
}],
"loop": true,
"name": &"smoke",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cvkk1"]
shader = ExtResource("7_s4ple")
shader_parameter/height = 0.5
shader_parameter/frequency = 3.0
shader_parameter/speed = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ee30a"]
atlas = ExtResource("24_wxd66")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucsnm"]
atlas = ExtResource("24_wxd66")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_s34qy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee30a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucsnm")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_tx2l4"]
viewport_path = NodePath("3DView")

[sub_resource type="Gradient" id="Gradient_lq8tc"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r2ii1"]
gradient = SubResource("Gradient_lq8tc")

[node name="Root" type="Node2D"]
process_mode = 1
script = ExtResource("1_dpdcl")

[node name="Player" parent="." instance=ExtResource("2_pxkbr")]
position = Vector2(1120, 748)

[node name="questManager" parent="." instance=ExtResource("3_6pp5x")]

[node name="ambiencePlayer" type="AudioStreamPlayer" parent="."]
volume_db = -0.887
autoplay = true

[node name="worldEnd" type="WorldEnvironment" parent="."]
environment = ExtResource("5_hwca2")
camera_attributes = SubResource("CameraAttributesPractical_xrx0c")

[node name="pauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
process_priority = -1
layer = 3
visible = false
script = ExtResource("6_3rkpl")

[node name="pauseMusic" type="AudioStreamPlayer" parent="pauseMenu"]
volume_db = -5.986
pitch_scale = 0.83

[node name="ColorRect" type="ColorRect" parent="pauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1497.0
offset_top = -1452.0
offset_right = 1503.0
offset_bottom = 1548.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 0.662745)

[node name="Label" type="Label" parent="pauseMenu"]
material = SubResource("ShaderMaterial_7flpv")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -253.0
offset_right = 255.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_t6qqg")
text = "Paused!"
label_settings = SubResource("LabelSettings_03vhg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume" type="Button" parent="pauseMenu"]
material = SubResource("ShaderMaterial_2hqfi")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -100.0
offset_right = 114.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_t6qqg")
text = "Resume"

[node name="restart" type="Button" parent="pauseMenu"]
material = SubResource("ShaderMaterial_2hqfi")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -26.0
offset_right = 114.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_t6qqg")
text = "Restart
"

[node name="quit" type="Button" parent="pauseMenu"]
material = SubResource("ShaderMaterial_2hqfi")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = 47.0
offset_right = 128.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_t6qqg")
text = "Save & Quit
"

[node name="pauseTimer" type="Timer" parent="pauseMenu"]
wait_time = 0.1
one_shot = true

[node name="transitionLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2
script = ExtResource("9_psqbl")

[node name="ColorRect" type="ColorRect" parent="transitionLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1934.0
offset_top = -209.0
offset_right = 4597.0
offset_bottom = 1289.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="transitionLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 560.0
offset_top = 489.0
offset_right = 1347.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
text = "Intermission..."
label_settings = SubResource("LabelSettings_5t4us")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="transitionLayer"]
libraries = {
"": SubResource("AnimationLibrary_u4itv")
}

[node name="uiLayer" type="CanvasLayer" parent="."]

[node name="vignette" type="ColorRect" parent="uiLayer"]
visible = false
material = SubResource("ShaderMaterial_i4rtp")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1018.5
offset_top = -573.0
offset_right = 1018.5
offset_bottom = 573.0
grow_horizontal = 2
grow_vertical = 2

[node name="debugUi" parent="uiLayer" instance=ExtResource("13_7f5fb")]
visible = false

[node name="vernumb" type="Label" parent="uiLayer"]
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -132.0
offset_right = 220.001
offset_bottom = -106.0
grow_vertical = 0
scale = Vector2(5, 5)
theme = ExtResource("11_ur5wi")
text = "Alpha"

[node name="ProgressBar" type="ProgressBar" parent="uiLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -180.0
offset_right = -208.0
offset_bottom = -163.0
scale = Vector2(4, 4)
script = ExtResource("12_ir7nj")

[node name="dialogBox" type="ColorRect" parent="uiLayer"]
visible = false
top_level = true
texture_filter = 1
material = SubResource("11")
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -537.0
offset_top = 154.0
offset_right = 537.0
offset_bottom = 330.0
grow_horizontal = 2
color = Color(0.372549, 0.372549, 0.372549, 0.490196)

[node name="text" type="Label" parent="uiLayer/dialogBox"]
material = SubResource("12")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.0
offset_top = -60.0
offset_right = 507.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("14")
text = "Hey, you aren't from around here, are you?"
vertical_alignment = 1
autowrap_mode = 3

[node name="portrait" type="AnimatedSprite2D" parent="uiLayer/dialogBox"]
material = SubResource("16")
position = Vector2(74, 70)
scale = Vector2(7.84375, 7.84375)
sprite_frames = SubResource("15")
animation = &"kin"
speed_scale = 0.0

[node name="textSpeed" type="Timer" parent="uiLayer/dialogBox"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="uiLayer/dialogBox"]
stream = ExtResource("23_j40ph")
volume_db = -4.831
max_polyphony = 8

[node name="progress" type="AnimatedSprite2D" parent="uiLayer/dialogBox"]
modulate = Color(0, 0, 0, 0.2)
material = SubResource("ShaderMaterial_cvkk1")
position = Vector2(999, 124)
scale = Vector2(2.4, 2.4)
sprite_frames = SubResource("SpriteFrames_s34qy")
autoplay = "default"
frame_progress = 0.10839

[node name="3DViewSprite" type="Sprite2D" parent="uiLayer"]
visible = false
position = Vector2(969, 546.5)
scale = Vector2(3.02813, 2.27708)
texture = SubResource("ViewportTexture_tx2l4")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.6)
motion_offset = Vector2(-240, -240)

[node name="background" type="Sprite2D" parent="ParallaxBackground/background"]
position = Vector2(1028, 750)
scale = Vector2(2, 2)
texture = ExtResource("25_5yaeg")

[node name="foreground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_offset = Vector2(-350, -325)

[node name="foreground" type="Sprite2D" parent="ParallaxBackground/foreground"]
modulate = Color(1, 1, 1, 0.243137)
position = Vector2(984, 712)
scale = Vector2(0.404192, 0.404192)
texture = ExtResource("26_a23wb")

[node name="TileMap" parent="." instance=ExtResource("27_702vk")]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="TileMap"]
z_index = 999
position = Vector2(958.5, 1164)
scale = Vector2(10.51, 2000)
texture = SubResource("GradientTexture1D_r2ii1")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.937255, 0.909804, 0.901961, 1)

[node name="levelTimer" type="Timer" parent="."]

[connection signal="pressed" from="pauseMenu/resume" to="pauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="pauseMenu/restart" to="pauseMenu" method="_on_restart_pressed"]
[connection signal="pressed" from="pauseMenu/quit" to="pauseMenu" method="_on_quit_pressed"]
